bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:4: error: not found: value temps2
  else if (temp1>100 && temps2<0)
                        ^